tests/invalid_sem/com/com06.java
class Main {
    static void run(){
        int a = 0;
    }
    static int b() {
        return 1;
    }
    static String c() {
        return b();
    }
}
